welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:15: error: not found: value GetMondeLargeur
      setPos(GetMondeLargeur() - 1 - i, compt / getMondeHauteur())
             ^